fixed color contrast issues on header background and removed message button on hero image

--- a/hair-salon/css/home.css
+++ b/hair-salon/css/home.css
@@ -25,7 +25,7 @@
         align-items: center;
         position: static;
         box-shadow: none;
-        background-color: none;
+        background-color: var(--accent2-color)
     }
 
     nav a {
